--- a/doc/agile/v1/sprint_backlog_09.org
+++ b/doc/agile/v1/sprint_backlog_09.org
@@ -17,14 +17,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-08 Mon 14:52]
+#+CAPTION: Clock summary at [2018-10-08 Mon 16:26]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *29:24* |       |      |   0.0 |
+| *Total time*                                                                | *30:34* |       |      |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 29:24   |       |      |   0.0 |
-| Active                                                                      |         | 29:24 |      |   0.0 |
+| Stories                                                                     | 30:34   |       |      |   0.0 |
+| Active                                                                      |         | 30:34 |      |   0.0 |
 | Edit release notes for previous sprint                                      |         |       | 1:30 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       | 2:36 |   0.0 |
 | Update readme to reflect org move                                           |         |       | 1:58 |   0.0 |
@@ -34,7 +34,7 @@
 | Update readme with information on reference models                          |         |       | 0:10 |   0.0 |
 | Remove test models from dogen project                                       |         |       | 1:13 |   0.0 |
 | Recap of the current situation                                              |         |       | 1:25 |   0.0 |
-| Investigate adding package management support to dogen                      |         |       | 7:27 |   0.0 |
+| Investigate adding package management support to dogen                      |         |       | 8:37 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -293,6 +293,9 @@ Notes:
 
 *** STARTED Investigate adding package management support to dogen    :story:
     :LOGBOOK:
+    CLOCK: [2018-10-08 Mon 15:55]--[2018-10-08 Mon 16:26] =>  0:31
+    CLOCK: [2018-10-08 Mon 15:30]--[2018-10-08 Mon 15:54] =>  0:24
+    CLOCK: [2018-10-08 Mon 14:53]--[2018-10-08 Mon 15:08] =>  1:01
     CLOCK: [2018-10-08 Mon 13:12]--[2018-10-08 Mon 14:52] =>  1:40
     CLOCK: [2018-10-08 Mon 09:10]--[2018-10-08 Mon 12:05] =>  5:42
     CLOCK: [2018-10-07 Sat 14:10]--[2018-10-07 Sat 17:02] =>  2:52
@@ -359,6 +362,24 @@ The great thing about this approach is that we can simply ocassionally
 do a pull from remote vcpkg projec to get latest, ensure it all builds
 correctly and then update dogen. The whole process is very simple and
 does not require having access to OSX and Windows boxes locally, etc.
+
+This would be fantastic but sadly it does not work out of the box. At
+present the version of XCode available on travis OSX does not compile
+vcpkg out of the box:
+
+: CMake Error at CMakeLists.txt:10 (message):
+:   Building the vcpkg tool requires support for the C++ Filesystem TS.
+:   Apple clang versions 9 and below do not have support for it.
+:   Please install gcc6 or newer from homebrew (brew install gcc6).
+:   If you would like to try anyway, set VCPKG_ALLOW_APPLE_CLANG.
+
+In addition, the linux GCC build also failed, even more misteriously:
+
+: The command "${TRAVIS_BUILD_DIR}/bootstrap-vcpkg.sh" exited with 1.
+
+We'll spin this off as a separate story into the backlog for the
+future; even just building with vcpkg locally its an improvement in
+dependency management.
 
 *** Upgrade to c++ 17                                                 :story:
 
