--- a/doc/agile/v1/sprint_backlog_09.org
+++ b/doc/agile/v1/sprint_backlog_09.org
@@ -17,24 +17,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-08 Mon 16:26]
-| <75>                                                                        |         |       |      |       |
-| Headline                                                                    | Time    |       |      |     % |
-|-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *30:34* |       |      |   0.0 |
-|-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 30:34   |       |      |   0.0 |
-| Active                                                                      |         | 30:34 |      |   0.0 |
-| Edit release notes for previous sprint                                      |         |       | 1:30 |   0.0 |
-| Sprint and product backlog grooming                                         |         |       | 2:36 |   0.0 |
-| Update readme to reflect org move                                           |         |       | 1:58 |   0.0 |
-| Create project for C# test model                                            |         |       | 5:23 |   0.0 |
-| Fix boost path serialisation errors                                         |         |       | 0:47 |   0.0 |
-| Create project for C++ test model                                           |         |       | 6:55 |   0.0 |
-| Update readme with information on reference models                          |         |       | 0:10 |   0.0 |
-| Remove test models from dogen project                                       |         |       | 1:13 |   0.0 |
-| Recap of the current situation                                              |         |       | 1:25 |   0.0 |
-| Investigate adding package management support to dogen                      |         |       | 8:37 |   0.0 |
+#+CAPTION: Clock summary at [2018-10-08 Mon 19:03]
+| <75>                                                                        |         |       |       |       |
+| Headline                                                                    | Time    |       |       |     % |
+|-----------------------------------------------------------------------------+---------+-------+-------+-------|
+| *Total time*                                                                | *32:32* |       |       |   0.0 |
+|-----------------------------------------------------------------------------+---------+-------+-------+-------|
+| Stories                                                                     | 32:32   |       |       |   0.0 |
+| Active                                                                      |         | 32:32 |       |   0.0 |
+| Edit release notes for previous sprint                                      |         |       |  1:30 |   0.0 |
+| Sprint and product backlog grooming                                         |         |       |  2:36 |   0.0 |
+| Update readme to reflect org move                                           |         |       |  1:58 |   0.0 |
+| Create project for C# test model                                            |         |       |  5:23 |   0.0 |
+| Fix boost path serialisation errors                                         |         |       |  0:47 |   0.0 |
+| Create project for C++ test model                                           |         |       |  6:55 |   0.0 |
+| Update readme with information on reference models                          |         |       |  0:10 |   0.0 |
+| Remove test models from dogen project                                       |         |       |  1:13 |   0.0 |
+| Recap of the current situation                                              |         |       |  1:25 |   0.0 |
+| Investigate adding package management support to dogen                      |         |       | 10:35 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -293,6 +293,7 @@ Notes:
 
 *** STARTED Investigate adding package management support to dogen    :story:
     :LOGBOOK:
+    CLOCK: [2018-10-08 Mon 16:27]--[2018-10-08 Mon 18:25] =>  1:58
     CLOCK: [2018-10-08 Mon 15:55]--[2018-10-08 Mon 16:26] =>  0:31
     CLOCK: [2018-10-08 Mon 15:30]--[2018-10-08 Mon 15:54] =>  0:24
     CLOCK: [2018-10-08 Mon 14:53]--[2018-10-08 Mon 15:08] =>  1:01
