--- a/doc/agile/v1/sprint_backlog_09.org
+++ b/doc/agile/v1/sprint_backlog_09.org
@@ -17,14 +17,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-08 Mon 19:49]
+#+CAPTION: Clock summary at [2018-10-09 Tue 14:11]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *33:07* |       |       |   0.0 |
+| *Total time*                                                                | *35:42* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 33:07   |       |       |   0.0 |
-| Active                                                                      |         | 33:07 |       |   0.0 |
+| Stories                                                                     | 35:42   |       |       |   0.0 |
+| Active                                                                      |         | 35:42 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:30 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  2:36 |   0.0 |
 | Update readme to reflect org move                                           |         |       |  1:58 |   0.0 |
@@ -34,7 +34,7 @@
 | Update readme with information on reference models                          |         |       |  0:10 |   0.0 |
 | Remove test models from dogen project                                       |         |       |  1:13 |   0.0 |
 | Recap of the current situation                                              |         |       |  1:25 |   0.0 |
-| Investigate adding package management support to dogen                      |         |       | 11:10 |   0.0 |
+| Investigate adding package management support to dogen                      |         |       | 13:45 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -293,6 +293,8 @@ Notes:
 
 *** STARTED Investigate adding package management support to dogen    :story:
     :LOGBOOK:
+    CLOCK: [2018-10-09 Tue 13:49]--[2018-10-09 Tue 14:11] =>  0:22
+    CLOCK: [2018-10-09 Tue 10:51]--[2018-10-09 Tue 13:04] =>  2:13
     CLOCK: [2018-10-08 Mon 19:33]--[2018-10-08 Mon 19:48] =>  0:15
     CLOCK: [2018-10-08 Mon 19:12]--[2018-10-08 Mon 19:32] =>  0:20
     CLOCK: [2018-10-08 Mon 16:27]--[2018-10-08 Mon 18:25] =>  1:58
