--- a/doc/agile/v1/sprint_backlog_09.org
+++ b/doc/agile/v1/sprint_backlog_09.org
@@ -17,14 +17,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-11 Thu 20:27]
+#+CAPTION: Clock summary at [2018-10-11 Thu 22:20]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *54:09* |       |       |   0.0 |
+| *Total time*                                                                | *54:40* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 54:09   |       |       |   0.0 |
-| Active                                                                      |         | 54:09 |       |   0.0 |
+| Stories                                                                     | 54:40   |       |       |   0.0 |
+| Active                                                                      |         | 54:40 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:30 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  2:36 |   0.0 |
 | Update readme to reflect org move                                           |         |       |  1:58 |   0.0 |
@@ -34,7 +34,7 @@
 | Update readme with information on reference models                          |         |       |  0:10 |   0.0 |
 | Remove test models from dogen project                                       |         |       |  1:13 |   0.0 |
 | Recap of the current situation                                              |         |       |  1:25 |   0.0 |
-| Investigate adding package management support to dogen                      |         |       | 29:52 |   0.0 |
+| Investigate adding package management support to dogen                      |         |       | 30:23 |   0.0 |
 | High-level model thoughts                                                   |         |       |  2:20 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -294,6 +294,7 @@ Notes:
 
 *** STARTED Investigate adding package management support to dogen    :story:
     :LOGBOOK:
+    CLOCK: [2018-10-11 Thu 21:49]--[2018-10-11 Thu 22:20] =>  0:31
     CLOCK: [2018-10-11 Thu 20:12]--[2018-10-11 Thu 20:27] =>  0:15
     CLOCK: [2018-10-11 Thu 14:05]--[2018-10-11 Thu 16:05] =>  2:00
     CLOCK: [2018-10-11 Thu 09:12]--[2018-10-11 Thu 12:24] =>  6:53
