--- a/doc/agile/v1/sprint_backlog_09.org
+++ b/doc/agile/v1/sprint_backlog_09.org
@@ -17,14 +17,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-12 Fri 12:21]
+#+CAPTION: Clock summary at [2018-10-12 Fri 14:56]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *57:30* |       |       |   0.0 |
+| *Total time*                                                                | *58:55* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 57:30   |       |       |   0.0 |
-| Active                                                                      |         | 57:30 |       |   0.0 |
+| Stories                                                                     | 58:55   |       |       |   0.0 |
+| Active                                                                      |         | 58:55 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:30 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  2:36 |   0.0 |
 | Update readme to reflect org move                                           |         |       |  1:58 |   0.0 |
@@ -34,8 +34,9 @@
 | Update readme with information on reference models                          |         |       |  0:10 |   0.0 |
 | Remove test models from dogen project                                       |         |       |  1:13 |   0.0 |
 | Recap of the current situation                                              |         |       |  1:25 |   0.0 |
-| Investigate adding package management support to dogen                      |         |       | 33:13 |   0.0 |
+| Investigate adding package management support to dogen                      |         |       | 33:41 |   0.0 |
 | High-level model thoughts                                                   |         |       |  2:20 |   0.0 |
+| Add commit info to version                                                  |         |       |  0:57 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -294,6 +295,7 @@ Notes:
 
 *** STARTED Investigate adding package management support to dogen    :story:
     :LOGBOOK:
+    CLOCK: [2018-10-12 Fri 13:30]--[2018-10-12 Fri 13:58] =>  0:28
     CLOCK: [2018-10-12 Fri 11:19]--[2018-10-12 Fri 12:21] =>  1:02
     CLOCK: [2018-10-12 Fri 09:30]--[2018-10-12 Fri 11:18] =>  1:48
     CLOCK: [2018-10-11 Thu 21:49]--[2018-10-11 Thu 22:20] =>  0:31
@@ -409,6 +411,34 @@ dependency management.
 
 Jot down ideas on the separation between the API and the
 implementation in dogen products.
+
+*** Tidy-up dogen windows package                                     :story:
+
+There are a few inconsistencies with the package:
+
+- dogen components have a strange structure:
+  "Dogen/runtime/dogen".
+- we should probably have a top-level umbrella for MASD, under which
+  dogen installs.
+- package name is windows amd64. We should use the vcpkg triplets for
+  simplicity (e.g. x64-windows).
+
+*** STARTED Add commit info to version                                :story:
+    :LOGBOOK:
+    CLOCK: [2018-10-12 Fri 13:58]--[2018-10-12 Fri 14:55] =>  0:57
+    :END:
+
+In the past we had the git commit SHA key on the version. This was
+useful, but caused the build to rebuild every time we committed
+locally. Since we only build the final binaries on tags, there wasn't
+much of a need for this so it was removed. However, we now build again
+on each commit so there is a requirement for it.
+
+To avoid the previous problems we should create some kind of macro
+that only adds the commit if we are building from the build machine;
+otherwise it just stamps something like "developer build". On the
+build machine we should also add a timestamp and if possible the
+travis/appveyor build number.
 
 *** Mapping of third-party dependencies                               :story:
 
